refactor :  Ward, Grade, Team, Shift, MemberShift 중복 참조 제거 및 도메인 관계 정리